--- a/src/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,8 +1,9 @@
 ﻿@model ComicBookGallery.Models.ComicBook
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+   
     ViewBag.Title = Model.DisplayText;
+    ViewBag.ShowBackBar = true;
 
 }
 
